MOSIP-32363 - Merged from develop branch and updated the maven plugins for JAVA21 (#674)
* resolved prereg testirg build issues

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* MOSIP-30868 Artifact id updated

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* [DSD-5071] Setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* [DSD-5071] Setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* [DSD-5071] setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* DSD-5071, MOSIP-32812

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* DSD-5071

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* DSD-5071 Uncommented XML file

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* Merged from develop branch

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

---------

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>
Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Co-authored-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>
Co-authored-by: Chandra Keshav Mishra <chandrakeshavmishra@gmail.com>
Co-authored-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>
Signed-off-by: Aiham <aiham.hasan@mindtree.com>

--- a/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
+++ b/apitest/src/main/resources/preReg/bookAppointment/bookAppointment.yml
@@ -619,5 +619,53 @@ BookAppointment:
   ]
 }'
 
-
-
+   Prereg_BookAppointment_with_expired_status:
+      endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      role: batch
+      checkErrorsOnlyInResponse: true
+      restMethod: post
+      inputTemplate: preReg/bookAppointment/bookAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId":"$ID:CreatePrereg_All_Valid_Smoke_for_expiry_sid_preRegistrationId$",   
+  "registration_center_id": "$registration_center_id$",
+  "id": "mosip.pre-registration.booking.book",
+  "version": "1.0",
+  "appointment_date": "2023-05-16",
+  "time_slot_from": "09:00:00",
+  "time_slot_to": "09:15:00",
+  "requesttime": "$TIMESTAMP$"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_CORE_REQ_013"
+      
+    }
+  ]
+}'
+   Prereg_BookAppointment_with_All_InValid_data:
+      endPoint: /preregistration/v1/applications/appointment/{preRegistrationId}
+      role: batch
+      checkErrorsOnlyInResponse: true
+      restMethod: post
+      inputTemplate: preReg/bookAppointment/bookAppointment
+      outputTemplate: preReg/error
+      input: '{
+  "preRegistrationId":"$nId$",   
+  "registration_center_id": "$333on_center_id$",
+  "id": "mosip.pre-regooking.book",
+  "version": "1.0.3fhffu",
+  "appointment_date": "$233ntment_date$",
+  "time_slot_from": "$time_2y6373gdg_from$",
+  "time_slot_to": "$time_slo373$",
+  "requesttime": "$TIMEST33dd"
+}'
+      output: '{
+   "errors": [
+    {
+      "errorCode": "PRG_CORE_REQ_013"
+      
+    }
+  ]
+}'
