MOSIP-32418 Updated the POM for the groupId and artifactId (#679)
* resolved prereg testirg build issues

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* MOSIP-30868 Artifact id updated

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* [DSD-5071] Setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* [DSD-5071] Setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* [DSD-5071] setup for apitest-prereg

Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>

* DSD-5071, MOSIP-32812

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* DSD-5071

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* DSD-5071 Uncommented XML file

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>

* Merged from develop branch

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

* MOSIP-32418 Updated the POM for the groupId and pulled the latest changes from develop

Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>

* MOSIP-32418

MOSIP-32418

Signed-off-by: Mohanachandran S <165888272+mohanachandran-s@users.noreply.github.com>

* MOSIP-32418

MOSIP-32418

Signed-off-by: Mohanachandran S <165888272+mohanachandran-s@users.noreply.github.com>

* MOSIP-32418

MOSIP-32418

Signed-off-by: Mohanachandran S <165888272+mohanachandran-s@users.noreply.github.com>

---------

Signed-off-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>
Signed-off-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>
Signed-off-by: Mohanachandran S <mohanachandran.s@technoforte.co.in>
Signed-off-by: Mohanachandran S <165888272+mohanachandran-s@users.noreply.github.com>
Co-authored-by: Sohan Kumar Dey <72375959+Sohandey@users.noreply.github.com>
Co-authored-by: Chandra Keshav Mishra <chandrakeshavmishra@gmail.com>
Co-authored-by: VSIVAKALYAN <kalyanvellanki321@gmail.com>
Sign

--- a/.github/workflows/push-trigger.yml
+++ b/.github/workflows/push-trigger.yml
@@ -19,6 +19,7 @@ on:
       - master
       - 1.*
       - develop*
+      - develop*
       - MOSIP*
 
 jobs:
@@ -133,7 +134,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '21'
+          java-version: 21
           server-id: ossrh # Value of the distributionManagement/repository/id field of the pom.xml
           settings-path: ${{ github.workspace }} # location for the settings.xml file
       - name: Setup the settings file for ossrh server
