--- a/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
+++ b/pre-registration/pre-registration-datasync-service/src/test/resources/application.properties
@@ -148,6 +148,6 @@ mosip.kernel.auth.appids.realm.map={prereg:'mosip',ida:'mosip',registrationclien
 preregistration.config.identityjson=
 preregistration.identity=
 
-mosip.preregistration.anonymous-profile-username:admin 
+mosip.preregistration.anonymous-profile-username=admin 
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
